--- a/XC8-18F26K20_BlinkLED.X/nbproject/Makefile-genesis.properties
+++ b/XC8-18F26K20_BlinkLED.X/nbproject/Makefile-genesis.properties
@@ -1,12 +1,12 @@
 #
-#Wed Feb 01 17:42:58 CST 2023
+#Wed Feb 01 18:29:25 CST 2023
 default.languagetoolchain.version=2.36
 default.Pack.dfplocation=D\:\\packs\\Microchip\\PIC18F-K_DFP\\1.7.134
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.36\\bin
 host.id=1egu-shcj-yw
-default.platformTool.md5=null
-configurations-xml=2886124c22920e31d40eb8addecf84a0
+configurations-xml=dbdd7185b07d5db4dfcea80b7ffe6b87
+default.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=4dbefbfcfeb5ea8604c92ef42a6c65da
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5ac7a99e4b1de1ea64248c04a43532ad
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=0e8fad895b9b8299a6c08191595e8207
 proj.dir=D\:\\GitHub\\PIC18F26K20_Examples\\XC8-18F26K20_BlinkLED.X
